# yappd

./: README.md  pdict.py  pdict_test.py  pyproject.toml
src/yappd/: __init__.py  pdict.py
tests/: pdict_test.py
